# Federated-Chemometrics

./: .coverage  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  config.yaml  config1.yaml  config2.yaml  pyproject.toml  pytest_nocov.ini  requirements.txt
data/: MA_A2.csv  MB_B2.csv  dataDescription.txt
data/ManufacturerB/: Val_ManufacturerB.xlsx
fig_Tab/: __init__.py  data_access.py  figures.py  generate_all.py  style.py  tables.py
scripts/: README.md  __init__.py  build_results_artifacts.py  create_complete_database.py  fig_1.py  fig_S1.py  generate_communication_materials.py  generate_core_tables.py  generate_figures_2_5.py  generate_objective_1.py  generate_objective_2.py  generate_objective_5.py  generate_objective_6.py  generate_summary_report.py  list_experimental_combos.py  results_plot.py  results_tables.py  run_all_objectives.py  run_for_figures.py  run_real_site_experiment.py  supp_pca_ma_a2_mb_b2.py  validate_config.py
src/fedchem/: __init__.py  experimental_design.py  methods.py  types.py
src/fedchem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fedchem/calibrators/: sbc.py
tests/: test_metrics.py  test_pds_transfer.py
tools/: analyze_manifests.py  diagnose_fedpls.py  generate_site_design.py  inspect_wavelengths.py  plot_results.py  prepare_real_dataset.py  run_dp_demo.py  run_pds_tests_quick.py  run_real_5site_experiment.py  run_real_site_experiment.py  site_design.py  summarize_debug_weights.py  test_pds_transfer_smoke.py  tmp_compute_stats.py  tmp_inspect_scalers.py  validate_config_run.py
(+60 files in other folders)
