[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fedchem"
version = "0.1.1"
description = "Federated Chemometrics: Calibration Transfer with Privacy & Conformal Prediction"
requires-python = ">=3.10"
authors = [{name = "TBD"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "pandas>=2.0",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "pyDOE2>=0.7.3",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.5",
  "black>=23.0",
  "ruff>=0.1.0",
  "jsonschema>=4.18",
]

[project.scripts]
spec-lint = "fedchem.scripts.spec_lint:main"

[tool.pytest.ini_options]
addopts = "-q --cov=fedchem --cov-branch --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
